--- a/src/main/resources/theExplorerResources/localization/eng/ExplorerMod-Relic-Strings.json
+++ b/src/main/resources/theExplorerResources/localization/eng/ExplorerMod-Relic-Strings.json
@@ -35,42 +35,42 @@
     "NAME": "Jar of Dirt",
     "FLAVOR": "It's a Jar of Dirt, what do you expect?",
     "DESCRIPTIONS": [
-      "At the beginning of combat, add 2 random Plants to your hand."
+      "At the beginning of combat, add #b2 random [#458B00]Plants[] to your hand."
     ]
   },
   "theExplorer:Journal": {
     "NAME": "Journal",
     "FLAVOR": "It's a book...",
     "DESCRIPTIONS": [
-      "Whenever you complete a research, gain a random bonus."
+      "Whenever you complete a #ytheexplorer:Research, gain a random bonus."
     ]
   },
   "theExplorer:Leftovers": {
     "NAME": "Leftovers",
     "FLAVOR": "Everything has a use.",
     "DESCRIPTIONS": [
-      "At the end of your turn, deal 1 damage to all enemies for each card in hand."
+      "At the end of your turn, deal #b1 damage to all enemies for each card in hand."
     ]
   },
   "theExplorer:Painkiller": {
     "NAME": "Painkiller",
     "FLAVOR": "Feeling better already.",
     "DESCRIPTIONS": [
-      "Whenever a debuff is applied to you, reduce it by 1 (but not below 1)."
+      "Whenever a debuff is applied to you, reduce it by #b1 (but not below #b1)."
     ]
   },
   "theExplorer:Quill": {
     "NAME": "Quill",
     "FLAVOR": "To be or not to be?",
     "DESCRIPTIONS": [
-      "Whenever you complete a research, gain 1 Energised."
+      "Whenever you complete a #ytheexplorer:Research, gain #b1 #ytheexplorer:Energised."
     ]
   },
   "theExplorer:Whistle": {
     "NAME": "Whistle",
     "FLAVOR": "Who's a good boy?",
     "DESCRIPTIONS": [
-      "Whenever your companion uses its ability, gain 4 block."
+      "Whenever your #ytheexplorer:Companion uses its ability, gain #b4 block."
     ]
   }
 }
